# Trabalho2-Prog3

./: CMakeLists.txt  Candidato.cpp  Cidade.cpp  Data.cpp  LeituraCSV.cpp  Partido.cpp  Relatorios.cpp  main.cpp
headers/: Candidato.h  Cidade.h  Data.h  LeituraCSV.h  Partido.h  Relatorios.h
